# sunday-3d

./: pyproject.toml
src/model1/: __init__.py  main.py
src/model1/model_libs/: api.py  units.py
src/model1/pens/: mediumbox copy.py  mediumbox.py  pens20.py  pens20_multisize.py  scisors.py
src/model1/samsung/: cover.py
src/model1/spices/: box54.py  box70.py  box84.py  medium.py  mediumbox.py
src/model1/tee/: tee copy.py  tee.py
src/model1/teebags/: teebags.py
